--- a/OpsManage/templates/cmdb/assetMap.html
+++ b/OpsManage/templates/cmdb/assetMap.html
@@ -45,14 +45,15 @@
                     <div class="row">
                         <div class="idcinfo text col-sm-4 border-right no-margin">
                             <span class="cabinfo">名称 :{{ idc.idc_name}}</span><br>
+                            <span class="cabinfo">单位 :{{ idc.organization}}</span><br>
                             <span class="cabinfo">地址 :{{ idc.idc_address}}</span><br>
                             <span class="cabinfo">备注 :{{ idc.idc_memo}}</span><br>
                             {% for count in peridc_asset_count %}
                             {% if count.idc_name == idc.idc_name %}
-                            <span class="cabinfo">主机数量：【 {{ count.data.servercount }} 】台</span><br>
-                            <span class="cabinfo">网络数量：【 {{ count.data.netcount }} 】台</span><br>
-                            <span class="cabinfo">存储数量：【 {{ count.data.securitycount }} 】台</span><br>
-                            <span class="cabinfo">安全数量：【 {{ count.data.storgecount }} 】台</span><br>
+                            <span class="cabinfo fa fa-server">主机设备数量：【 {{ count.data.servercount }} 】台</span><br>
+                            <span class="cabinfo fa fa-sitemap">网络设备数量：【 {{ count.data.netcount }} 】台</span><br>
+                            <span class="cabinfo fa fa-database">存储设备数量：【 {{ count.data.securitycount }} 】台</span><br>
+                            <span class="cabinfo fa fa-shield">安全设备数量：【 {{ count.data.storgecount }} 】台</span><br>
                             {% endif %}
                             {% endfor %}
 
